Add rpc binding method

--- a/src/wrapper/CMakeLists.txt
+++ b/src/wrapper/CMakeLists.txt
@@ -3,7 +3,7 @@ include_directories("..")
 
 link_directories("../..")
 
-file(GLOB_RECURSE WRAPPER "test_wrapper.cpp")
+file(GLOB_RECURSE WRAPPER "wrapper_rpc.cpp")
 file(GLOB_RECURSE ORACLE "oracle.cpp")
 
 add_library(oracle SHARED ${ORACLE})
@@ -11,3 +11,7 @@ add_library(oracle SHARED ${ORACLE})
 add_executable(wrapper ${WRAPPER})
 target_link_libraries(wrapper oracle)
 target_link_libraries(wrapper quartz_runtime)
+
+add_library(librpc STATIC IMPORTED)
+set_property(TARGET librpc PROPERTY IMPORTED_LOCATION /home/pengyul/lib/usr/local/lib/librpc.a)
+target_link_libraries(wrapper librpc)
