Add preprocessing with only rotation merging

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -33,6 +33,7 @@ file(GLOB_RECURSE TEST_OPTIMIZE "test_optimize.cpp")
 file(GLOB_RECURSE TEST_CREATE_GRAPHXFER_FROM_QASM "test_create_graphXfer_from_qasm.cpp")
 file(GLOB_RECURSE TEST_PARTITION "test_partition.cpp")
 file(GLOB_RECURSE PREPROCESS "preprocess.cpp")
+file(GLOB_RECURSE PREPROCESS_ROT "preprocess_rotation_merging.cpp")
 
 if(USE_ARBLIB)
     file(GLOB_RECURSE TEST_ARB "test_arb.cpp")
@@ -71,6 +72,7 @@ add_executable(test_optimize ${TEST_OPTIMIZE} )
 add_executable(test_create_graphXfer_from_qasm ${TEST_CREATE_GRAPHXFER_FROM_QASM} )
 add_executable(test_partition ${TEST_PARTITION} )
 add_executable(preprocess ${PREPROCESS} )
+add_executable(preprocess_rotation_merging ${PREPROCESS_ROT} )
 if(USE_ARBLIB)
     add_executable(test_arb ${TEST_ARB} )
 endif()
