Support barrier gate

--- a/src/wrapper/CMakeLists.txt
+++ b/src/wrapper/CMakeLists.txt
@@ -6,18 +6,23 @@ include_directories(~/lib/usr/local/include)
 
 file(GLOB_RECURSE WRAPPER_RPC "rpc/wrapper_rpc.cpp")
 file(GLOB_RECURSE TEST_RPC "rpc/test_rpc.cpp")
+file(GLOB_RECURSE TEST_ORACLE "test_oracle.cpp")
 file(GLOB_RECURSE ORACLE "oracle.cpp")
 
 add_library(oracle SHARED ${ORACLE})
 
 add_executable(wrapper_rpc ${WRAPPER_RPC})
 add_executable(test_rpc ${TEST_RPC})
+add_executable(test_oracle ${TEST_ORACLE})
 
 target_link_libraries(wrapper_rpc oracle)
 target_link_libraries(wrapper_rpc quartz_runtime)
 
 target_link_libraries(test_rpc oracle)
 target_link_libraries(test_rpc quartz_runtime)
+
+target_link_libraries(test_oracle oracle)
+target_link_libraries(test_oracle quartz_runtime)
 
 add_library(librpc STATIC IMPORTED)
 set_property(TARGET librpc PROPERTY IMPORTED_LOCATION /home/pengyul/lib/usr/local/lib/librpc.a)
