--- a/src/wrapper/CMakeLists.txt
+++ b/src/wrapper/CMakeLists.txt
@@ -2,7 +2,6 @@ include_directories(${CMAKE_INCLUDE_PATH})
 include_directories("..")
 
 link_directories("../..")
-include_directories(~/lib/usr/local/include)
 
 file(GLOB_RECURSE WRAPPER_RPC "rpc/wrapper_rpc.cpp")
 file(GLOB_RECURSE TEST_RPC "rpc/test_rpc.cpp")
@@ -10,6 +9,7 @@ file(GLOB_RECURSE TEST_ORACLE "test_oracle.cpp")
 file(GLOB_RECURSE ORACLE "oracle.cpp")
 
 add_library(oracle SHARED ${ORACLE})
+target_link_libraries(oracle quartz_runtime)
 
 add_executable(wrapper_rpc ${WRAPPER_RPC})
 add_executable(test_rpc ${TEST_RPC})
@@ -25,6 +25,6 @@ target_link_libraries(test_oracle oracle)
 target_link_libraries(test_oracle quartz_runtime)
 
 add_library(librpc STATIC IMPORTED)
-set_property(TARGET librpc PROPERTY IMPORTED_LOCATION /home/pengyul/lib/usr/local/lib/librpc.a)
+set_property(TARGET librpc PROPERTY IMPORTED_LOCATION $ENV{LIBRPC_PATH})
 target_link_libraries(wrapper_rpc librpc)
 target_link_libraries(test_rpc librpc)
