Support conda environment with native Python environment

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(Quartz)
 SET(CMAKE_BUILD_TYPE "Release")
 
 # python
+set(Python_FIND_VIRTUALENV FIRST)
 if (MSVC)
     # Could not find the "Development" component on Windows. Using the following commands
     # to get Python_INCLUDE_DIRS and Python_LIBRARY_DIRS.
@@ -25,8 +26,8 @@ message(STATUS "Python library directories: ${Python_LIBRARY_DIRS}")
 link_directories(${Python_LIBRARY_DIRS})
 
 # pybind11
-execute_process(COMMAND ${Python_EXECUTABLE} -m pybind11 --cmake
-        OUTPUT_VARIABLE pybind11_DIR OUTPUT_STRIP_TRAILING_WHITESPACE)
+#execute_process(COMMAND ${Python_EXECUTABLE} -m pybind11 --cmake
+#        OUTPUT_VARIABLE pybind11_DIR OUTPUT_STRIP_TRAILING_WHITESPACE)
 find_package(pybind11 CONFIG REQUIRED)
 include_directories(${pybind11_INCLUDE_DIR})
 
