Revert change to finding pybind11

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,8 +26,9 @@ message(STATUS "Python library directories: ${Python_LIBRARY_DIRS}")
 link_directories(${Python_LIBRARY_DIRS})
 
 # pybind11
-#execute_process(COMMAND ${Python_EXECUTABLE} -m pybind11 --cmake
-#        OUTPUT_VARIABLE pybind11_DIR OUTPUT_STRIP_TRAILING_WHITESPACE)
+# comment out the following two lines if you encounter issues with finding pybind11
+execute_process(COMMAND ${Python_EXECUTABLE} -m pybind11 --cmake
+        OUTPUT_VARIABLE pybind11_DIR OUTPUT_STRIP_TRAILING_WHITESPACE)
 find_package(pybind11 CONFIG REQUIRED)
 include_directories(${pybind11_INCLUDE_DIR})
 
