[Gate] Exact support for ratios of pi

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -32,6 +32,7 @@ file(GLOB_RECURSE TEST_OPTIMIZE "test_optimize.cpp")
 file(GLOB_RECURSE TEST_CREATE_GRAPHXFER_FROM_QASM "test_create_graphXfer_from_qasm.cpp")
 file(GLOB_RECURSE TEST_PARTITION "test_partition.cpp")
 file(GLOB_RECURSE TEST_MULT "test_mult.cpp")
+file(GLOB_RECURSE TEST_PI "test_pi.cpp")
 if(USE_ARBLIB)
     file(GLOB_RECURSE TEST_ARB "test_arb.cpp")
 endif()
@@ -68,6 +69,7 @@ add_executable(test_optimize ${TEST_OPTIMIZE} )
 add_executable(test_create_graphXfer_from_qasm ${TEST_CREATE_GRAPHXFER_FROM_QASM} )
 add_executable(test_partition ${TEST_PARTITION} )
 add_executable(test_mult ${TEST_MULT} )
+add_executable(test_pi ${TEST_PI} )
 if(USE_ARBLIB)
     add_executable(test_arb ${TEST_ARB} )
 endif()
