[Parser] Symbolic expressions for pi

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -34,6 +34,7 @@ file(GLOB_RECURSE TEST_PARTITION "test_partition.cpp")
 file(GLOB_RECURSE TEST_MULT "test_mult.cpp")
 file(GLOB_RECURSE TEST_PI "test_pi.cpp")
 file(GLOB_RECURSE TEST_CONSTANTS "test_constants.cpp")
+file(GLOB_RECURSE TEST_QASM_PARSER "test_qasm_parser.cpp" )
 if(USE_ARBLIB)
     file(GLOB_RECURSE TEST_ARB "test_arb.cpp")
 endif()
@@ -72,6 +73,7 @@ add_executable(test_partition ${TEST_PARTITION} )
 add_executable(test_mult ${TEST_MULT} )
 add_executable(test_pi ${TEST_PI} )
 add_executable(test_constants ${TEST_CONSTANTS} )
+add_executable(test_qasm_parser ${TEST_QASM_PARSER} )
 if(USE_ARBLIB)
     add_executable(test_arb ${TEST_ARB} )
 endif()
