[Interface] equivalence checker for OpenQASM files

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -35,6 +35,7 @@ file(GLOB_RECURSE TEST_MULT "test_mult.cpp")
 file(GLOB_RECURSE TEST_PI "test_pi.cpp")
 file(GLOB_RECURSE TEST_CONSTANTS "test_constants.cpp")
 file(GLOB_RECURSE TEST_QASM_PARSER "test_qasm_parser.cpp" )
+file(GLOB_RECURSE VERIFY_OPENQASM "verify_openqasm.cpp" )
 if(USE_ARBLIB)
     file(GLOB_RECURSE TEST_ARB "test_arb.cpp")
 endif()
@@ -74,6 +75,7 @@ add_executable(test_mult ${TEST_MULT} )
 add_executable(test_pi ${TEST_PI} )
 add_executable(test_constants ${TEST_CONSTANTS} )
 add_executable(test_qasm_parser ${TEST_QASM_PARSER} )
+add_executable(verify_openqasm ${VERIFY_OPENQASM} )
 if(USE_ARBLIB)
     add_executable(test_arb ${TEST_ARB} )
 endif()
