--- a/src/benchmark/CMakeLists.txt
+++ b/src/benchmark/CMakeLists.txt
@@ -7,6 +7,8 @@ file(GLOB_RECURSE NAM_SMALL_CIRCUITS "nam_small_circuits.cpp")
 add_executable(benchmark_nam_small_circuits ${NAM_SMALL_CIRCUITS})
 file(GLOB_RECURSE NAM_MIDDLE_CIRCUITS "nam_middle_circuits.cpp")
 add_executable(benchmark_nam_middle_circuits ${NAM_MIDDLE_CIRCUITS})
+file(GLOB_RECURSE OPTIMIZATION_STEPS "benchmark_optimization_steps.cpp")
+add_executable(benchmark_optimization_steps ${OPTIMIZATION_STEPS})
 
 # TODO: Rename them
 file(GLOB_RECURSE ILP_NUM_STAGES "ilp_num_stages.cpp")
