--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,6 +21,7 @@ repos:
             [
                 "--skip-string-normalization",
             ]
+        language_version: python3.11
 
 -   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v2.3.0
