--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -10,5 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-python@v3
+      - name: Set up Python 3.11  # <-- add this name for clarity
+        uses: actions/setup-python@v3
+        with:
+          python-version: '3.11'   # <-- explicitly pin Python version
       - uses: pre-commit/action@v3.0.0
