make it compile on macos

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,7 +77,13 @@ if(MSVC)
     set(BUILD_SHARED_LIBS TRUE)
     set(CMAKE_CXX_FLAGS "/std:c++17 ${CMAKE_CXX_FLAGS}")
 else()
-    set(CMAKE_CXX_FLAGS "-fPIC ${CMAKE_CXX_FLAGS}")
+    set(CMAKE_CXX_FLAGS "-fPIC -std=c++17 ${CMAKE_CXX_FLAGS}")
+    if(APPLE)
+        # Add macOS SDK paths for standard library headers
+        execute_process(COMMAND xcrun --show-sdk-path OUTPUT_VARIABLE MACOS_SDK_PATH OUTPUT_STRIP_TRAILING_WHITESPACE)
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -isysroot ${MACOS_SDK_PATH}")
+        include_directories(SYSTEM ${MACOS_SDK_PATH}/usr/include/c++/v1)
+    endif()
 endif()
 
 # if ("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
